--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,21 +2,25 @@ name: Update Levels
 
 on:
   schedule:
-    - cron: '0 * * * *'  # This means the action will run every hour
+    - cron: '0 12 * * *'  # Adjust the schedule as needed
 
 jobs:
-  update:
+  update-levels:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run script
-        run: python your_script.py
+    - name: Checkout repository
+      uses: actions/checkout@v3  # Updated to the latest version
+
+    - name: Set up Python
+      uses: actions/setup-python@v4  # Updated to the latest version
+      with:
+        python-version: '3.11'  # Ensure this matches your Python version
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests pandas numpy scipy pytz python-telegram-bot
+
+    - name: Run script
+      run: python ob/cryptolevelsking.py  # Updated to the correct path
